@@ -11,6 +11,7 @@ package com.farao_community.farao.data.refprog.reference_program;
 import com.farao_community.farao.commons.EICode;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 /**
  * @author Peter Mitri {@literal <peter.mitri at rte-france.com>}
@@ -61,7 +62,7 @@ public class ReferenceProgram {
     }
 
     public double getExchange(EICode areaOrigin, EICode areaExtremity) {
-        List<ReferenceExchangeData> entries = referenceExchangeDataList.stream().filter(referenceExchangeData -> referenceExchangeData.isAreaOutToAreaInExchange(areaOrigin, areaExtremity)).toList();
+        List<ReferenceExchangeData> entries = referenceExchangeDataList.stream().filter(referenceExchangeData -> referenceExchangeData.isAreaOutToAreaInExchange(areaOrigin, areaExtremity)).collect(Collectors.toList());
         if (!entries.isEmpty()) {
             return entries.stream().mapToDouble(ReferenceExchangeData::getFlow).sum();
         } else {
